# SEF_GP1

./: CMakeLists.txt  README.md  battery_monitoring_page.cpp  battery_monitoring_page.h  database.cpp  database.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  settingwindow.h  simulator.cpp  simulator.h  solar_monitoring_page.cpp  solar_monitoring_page.h
SEMS/: CMakeLists.txt  database.cpp  database.h  email_alert.py  loginwindow.cpp  mainwindow.cpp  mainwindow.ui  settingwindow.cpp  settingwindow.h  simulator.cpp  simulator.h
omar version/: solar_monitoring_page.cpp  solar_monitoring_page.h
